--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,22 @@ Fonts
 
 @font-face {
     font-family: 'montserrat';
-    src: url(fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
+    src: url('fonts/webfontkit-Montserrat/montserrat-variablefont_wght-webfont.woff2') format('woff2'),
+         url('fonts/webfontkit-Montserrat/montserrat-variablefont_wght-webfont.woff') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+
 }
 
 @font-face {
     font-family: 'source-sans-pro';
-    src: url(fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf);
+    src: url('fonts/webfontkit-Source_Sans_Pro/sourcesanspro-regular-webfont.woff2') format('woff2'),
+         url('fonts/webfontkit-Source_Sans_Pro/sourcesanspro-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+
 }
 
 /*************************
@@ -300,6 +310,7 @@ Home
 
 .page-home img {
     width: 100%;
+    height: auto;
     margin-top: 10px;
     clip-path: polygon(0% 22%, 13% 21%, 29% 10%, 43% 7%, 47% 9%, 51% 7%, 59% 11%, 61% 8%, 73% 13%, 78% 18%, 83% 17%, 88% 19%, 92% 17%, 100% 21%, 100% 70%, 79% 70%, 72% 73%, 59% 71%, 56% 70%, 40% 67%, 24% 71%, 17% 70%, 9% 73%, 0% 75%);
 }
@@ -378,6 +389,7 @@ Detall
 
 .picture-detall {
     width: 100%;
+    height: auto;
 }
 
 .map-wrapper {
