--- a/src/styles.css
+++ b/src/styles.css
@@ -331,6 +331,7 @@ Home
     font-size: 1.2rem;
     display: inline-block;
     transition: background-color 0.5s ease, color 0.5s ease, padding 0.5s ease;
+    margin-bottom: 20px;
 }
 
 .button:hover {
